--- a/src/styles.css
+++ b/src/styles.css
@@ -48,6 +48,10 @@ header {
   margin-bottom: 10px;
   color: rgb(0, 0, 0, 0.75);
 }
+#footer {
+  display: block;
+  margin: 0 auto;
+}
 .body-of-app {
   background: linear-gradient(
     180deg,
