--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ small {
 header {
   margin-bottom: 25px;
 }
+footer {
+  margin-left: 80px;
+}
 #temp-unit-button {
   text-align: center;
   border: 10px, solid, #0099ff;
@@ -47,10 +50,6 @@ header {
   font-size: 14px;
   margin-bottom: 10px;
   color: rgb(0, 0, 0, 0.75);
-}
-#footer {
-  display: block;
-  margin: 0 auto;
 }
 .body-of-app {
   background: linear-gradient(
