--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Arimo", sans-serif;
+  margin-top: 10px;
 }
 small {
   font-family: monospace;
@@ -33,7 +34,7 @@ footer {
   background: #0099ff;
 }
 #main-weather-icon {
-  font-size: 80px;
+  font-size: 60px;
 }
 #date-and-time {
   line-height: 25px;
@@ -51,7 +52,9 @@ footer {
   margin-bottom: 10px;
   color: rgb(0, 0, 0, 0.75);
 }
+
 .body-of-app {
+  border: #0099ff solid 1px;
   background: linear-gradient(
     180deg,
     rgb(255, 255, 255) 16%,
@@ -60,13 +63,15 @@ footer {
 }
 .weather-label {
   font-size: 14px;
-  margin-left: 60px;
+  margin-left: 70px;
   line-height: 20px;
+  padding-top: 5px;
 }
 .weather-label-data {
-  margin-right: 60px;
+  margin-right: 70px;
   font-size: 14px;
   line-height: 20px;
+  padding-top: 5px;
 }
 .weekday {
   color: #0099ff;
