--- a/src/styles.css
+++ b/src/styles.css
@@ -7,23 +7,23 @@ small {
 }
 header {
   margin-bottom: 25px;
+  margin-top: 10px;
+  padding-right: 7px;
 }
 footer {
   margin-left: 240px;
-}
-#temp-unit-button {
-  text-align: center;
-  border: 10px, solid, #0099ff;
-  border-radius: 50%;
-  float: right;
-  background-color: rgb(0, 153, 255, 0.15);
 }
 #current-location-button {
   text-align: center;
   border: 10px, solid, #0099ff;
   border-radius: 50%;
-  float: left;
+  float: right;
   background-color: rgba(0, 153, 255, 0.15);
+}
+#units {
+  font-size: 14px;
+  position: relative;
+  bottom: 12px;
 }
 #search-bar {
   margin: 10px 0;
